# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
projekti-sovellus/: .env  .env.test  database.sqlite  pyproject.toml  tasks.py  test-database.sqlite
projekti-sovellus/data/: database.sqlite
projekti-sovellus/dokumentaatio/: arkkitehtuuri.md  asennusohjeet.md  changelog.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimuusmaarittely.md
projekti-sovellus/src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
projekti-sovellus/src/entities/: project.py  user.py
projekti-sovellus/src/repositories/: project_repository.py  user_repository.py
projekti-sovellus/src/services/: date_service.py  music_service.py  project_service.py  user_service.py
projekti-sovellus/src/tests/repositories/: project_repository_test.py
projekti-sovellus/src/tests/services/: project_service_test.py  service_test.py
projekti-sovellus/src/ui/: add_project_view.py  edit_project_view.py  login_view.py  main_view.py  music_view.py  project_list_view.py  project_view.py  register_view.py  sheet_music_view.py  ui.py
