[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Lotta Toivanen",email = "lotta.toivanen@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]
