[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Lotta Toivanen <lotta.toivanen@helsinki.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
invoke = ">=2.2.1,<3.0.0"
coverage = ">=7.13.5,<8.0.0"
python-dotenv = ">=1.2.2,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]
